[project]
name = "oss-upload"
description = ""
version = "1.0.1"
license = "MIT" 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["alibabacloud_oss_v2", "numpy"]

[project.urls]
Repository = "https://github.com/awsl1110/ComfyUI-OSS-Upload"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/awsl1110/ComfyUI-OSS-Upload/wiki"
"Bug Tracker" = "https://github.com/awsl1110/ComfyUI-OSS-Upload/issues"

[tool.comfy]
PublisherId = "wanest"
DisplayName = "ComfyUI-OSS-Upload"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

